--- a/package.json
+++ b/package.json
@@ -20,28 +20,24 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/sero-cash/js-sero-client.git"
   },
   "keywords": [
     "sero",
     "wallets",
     "keys"
   ],
-  "author": "SERO.CASH <corp@sero.vip>",
+  "author": "gordon@sero <gordon-sero@sero.vip>",
   "license": "MIT",
   "bugs": {
-    "url": ""
+    "url": "https://github.com/sero-cash/js-sero-client/issues"
   },
-  "homepage": "",
+  "homepage": "https://github.com/sero-cash/js-sero-client",
   "dependencies": {
     "bs58": "^4.0.1",
-    "coinstring": "^2.3.0",
     "ffi": "^2.3.0",
-    "fibers": "^4.0.1",
     "node-cmd": "^3.0.0",
     "ref": "^1.3.5",
-    "ref-array": "^1.2.0",
-    "ref-struct": "^1.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
