--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "bs58": "^4.0.1",
     "ffi": "^2.3.0",
     "node-cmd": "^3.0.0",
-    "ref": "^1.3.5",
+    "ref": "^1.3.5"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
